--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                 <a href="#" class="logo-name">Meow Café</a>
                 <ul class="menu">
                     <li class="menu__item menu__item--active">
-                        <a href="#">Início</a>
+                        <a href="#inicio">Início</a>
                     </li>
                     <li class="menu__item">
-                        <a href="#">Produtos</a>
+                        <a href="#produtos">Produtos</a>
                     </li>
                     <li class="menu__item">
-                        <a href="#">Sobre</a>
+                        <a href="#sobre">Sobre</a>
                     </li>
                 </ul>
             </nav>
@@ -50,9 +50,9 @@
         </div>
     </div>
     <ul class="header__btn-menu-list">
-        <li><a href="#">Início</a></li>
-        <li><a href="#">Produtos</a></li>
-        <li><a href="#">Sobre</a></li>
+        <li><a href="#inicio">Início</a></li>
+        <li><a href="#produtos">Produtos</a></li>
+        <li><a href="#sobre">Sobre</a></li>
         <li><a href="#">Login</a></li>
     </ul>
 </div>
@@ -70,7 +70,7 @@
 </main>
 
 
-    <section class="cafes">
+    <section id="produtos" class="cafes">
         <div class="container">
             <div class="cafes__inner">
                 <h3 class="cafes__title">Cafés</h3>
@@ -136,7 +136,7 @@
         </div>
     </section>
 
-    <section class="sobre">
+    <section id="sobre" class="sobre">
         <div class="container">
             <div class="sobre__inner">
                 <div class="sobre__left">
@@ -196,9 +196,9 @@
             <div class="footer__links footer__item">
                 <div class="footer__name">Links Úteis</div>
                 <ul class="footer__list">
-                    <li><a href="#">Início</a></li>
-                    <li><a href="#">Sobre</a></li>
-                    <li><a href="#">Produtos</a></li>
+                    <li><a href="#inicio">Início</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#productos">Produtos</a></li>
                     <li><a href="#">Delivery</a></li>
                     <li><a href="#">Login</a></li>
                 </ul>
